objects/amc__Holiday__c.object
<CustomObject>
    <description>Used to track Public and Resource related holidays</description>
    <fields>
        <fullName>amc__Approval_Status__c</fullName>
        <inlineHelpText>Identifies whether this holiday / absence has been approved</inlineHelpText>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>amc__Approver_Current_User__c</fullName>
        <formula>IF( amc__Role__r.amc__Timesheet_Approver__r.amc__User__r.Id = $User.Id, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Identifies if the Current User Is the User required to approve this holiday</inlineHelpText>
        <label>Approver Current User</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amc__Approver__c</fullName>
        <formula>amc__Role__r.amc__Timesheet_Approver__r.amc__First_Name__c + &quot; &quot; + amc__Role__r.amc__Timesheet_Approver__r.amc__Last_Name__c</formula>
        <inlineHelpText>Identifies the person responsible for approving this Holiday (The Role&apos;s Timesheet Approver)</inlineHelpText>
        <label>Approver</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amc__Days_Taken__c</fullName>
        <inlineHelpText>Specify the number of days taken (working days only)</inlineHelpText>
        <label>Days Taken</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amc__End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>amc__End_Time__c</fullName>
        <label>End Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>amc__Frequency__c</fullName>
        <label>Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>amc__Frequency</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>amc__Global_Holiday__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Identifies if this Holiday is a Global Holiday that should be allocated to all Roles</inlineHelpText>
        <label>Global Holiday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Holiday_Allowance__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Identifies the Holiday Allowance record this Holiday relates to</inlineHelpText>
        <label>Holiday Allowance</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.amc__Role__c</field>
                <operation>equals</operation>
                <valueField>amc__Holiday_Allowance__c.amc__Role__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>amc__Holiday_Allowance__c</referenceTo>
        <relationshipLabel>Holidays</relationshipLabel>
        <relationshipName>Holidays</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>amc__Hours_Taken__c</fullName>
        <inlineHelpText>Identifies the total number of hours taken during this holiday / absence</inlineHelpText>
        <label>Hours Taken</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amc__Is_Recurring__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Recurring</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Manual_Allocation__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, denotes child Role Allocation Records are manually allocated.</inlineHelpText>
        <label>Manual Allocation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Number_of_Recurrences__c</fullName>
        <label>Number of Recurrences</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amc__Rejection_Comments__c</fullName>
        <inlineHelpText>Identifies the reason this holiday / absence was rejected</inlineHelpText>
        <label>Rejection Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>amc__Role__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If the Holiday is for a specific Role, it can be added here.</description>
        <label>Role</label>
        <referenceTo>amc__Role__c</referenceTo>
        <relationshipLabel>Holidays</relationshipLabel>
        <relationshipName>Holidays</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>amc__Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>amc__Start_Time__c</fullName>
        <label>Start Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>amc__Type__c</fullName>
        <inlineHelpText>Identifies the type of holiday / absence</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Annual Leave</fullName>
                </value>
                <value>
                    <fullName>Sick Leave</fullName>
                </value>
                <value>
                    <fullName>Time Off in Lieu</fullName>
                </value>
                <value>
                    <fullName>Maternity Leave</fullName>
                </value>
                <value>
                    <fullName>Paternity Leave</fullName>
                </value>
                <value>
                    <fullName>Study Leave</fullName>
                </value>
                <value>
                    <fullName>Public Holiday</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Holiday</label>
    <listViews>
        <fullName>amc__All</fullName>
        <columns>NAME</columns>
        <columns>amc__Start_Date__c</columns>
        <columns>amc__End_Date__c</columns>
        <columns>amc__Days_Taken__c</columns>
        <columns>amc__Hours_Taken__c</columns>
        <columns>amc__Approval_Status__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>amc__Holidays_Requiring_My_Approval</fullName>
        <columns>NAME</columns>
        <columns>amc__Role__c</columns>
        <columns>amc__Type__c</columns>
        <columns>amc__Start_Date__c</columns>
        <columns>amc__End_Date__c</columns>
        <columns>amc__Days_Taken__c</columns>
        <columns>amc__Hours_Taken__c</columns>
        <columns>amc__Approval_Status__c</columns>
        <columns>amc__Rejection_Comments__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>amc__Approval_Status__c</field>
            <operation>equals</operation>
            <value>Submitted</value>
        </filters>
        <filters>
            <field>amc__Approver_Current_User__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Holidays Requiring My Approval</label>
    </listViews>
    <nameField>
        <label>Holiday Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Holidays</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>amc__Cannot_Approve_Own_Holidays</fullName>
        <active>false</active>
        <description>This Validation Rule ensures a person cannot approve their own holiday requests</description>
        <errorConditionFormula>OR( 
AND(ISNEW(), ISPICKVAL(amc__Approval_Status__c, &quot;Approved&quot;) , amc__Role__r.amc__User__r.Id = $User.Id ) 
, 
AND( ISCHANGED(amc__Approval_Status__c), ISPICKVAL(amc__Approval_Status__c, &quot;Approved&quot;) , amc__Role__r.amc__User__r.Id = $User.Id ) 
, 
AND(ISPICKVAL(amc__Approval_Status__c, &quot;Approved&quot;), ISCHANGED( amc__Role__c ), amc__Role__r.amc__User__r.Id = $User.Id ) 
)</errorConditionFormula>
        <errorMessage>You cannot approve your own holiday requests</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>amc__Ensure_HA_Remaining_Sufficient</fullName>
        <active>true</active>
        <description>Ensure the Holiday Allowance &apos;Remaining&apos; is not less then the Holiday &apos;Days Taken&apos;</description>
        <errorConditionFormula>OR(
AND(ISNEW(),NOT(ISBLANK(amc__Holiday_Allowance__c)),amc__Holiday_Allowance__r.amc__Remaining__c &lt; amc__Days_Taken__c)
,
AND(NOT(ISBLANK(amc__Holiday_Allowance__c)), ISCHANGED(amc__Days_Taken__c),(amc__Holiday_Allowance__r.amc__Remaining__c + PRIORVALUE(amc__Days_Taken__c)) &lt; amc__Days_Taken__c)
)</errorConditionFormula>
        <errorMessage>The Holiday Allowance does not have sufficient days remaining for the number of days you&apos;re requesting</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>amc__Ensure_Holiday_Allowance_Specified</fullName>
        <active>false</active>
        <description>Ensure a Holiday Allowance record is specified</description>
        <errorConditionFormula>AND(
 ISBLANK(amc__Holiday_Allowance__c),
 NOT(
  ISBLANK(amc__Role__c)
 ),
 OR(
  ISPICKVAL(amc__Type__c, &quot;Annual Leave&quot;),
  ISPICKVAL(amc__Type__c, &quot;Sick Leave&quot;),
  ISPICKVAL(amc__Type__c, &quot;Study Leave&quot;)
 )
)</errorConditionFormula>
        <errorMessage>You must select a Holiday Allowance for this Holiday</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>amc__Recurring_Validation_Frequency</fullName>
        <active>true</active>
        <errorConditionFormula>AND(amc__Is_Recurring__c, ISBLANK(TEXT(amc__Frequency__c)))</errorConditionFormula>
        <errorDisplayField>amc__Frequency__c</errorDisplayField>
        <errorMessage>You must set the Recurring Frequency</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>amc__Recurring_Validation_Number</fullName>
        <active>true</active>
        <errorConditionFormula>AND(amc__Is_Recurring__c, ISBLANK(amc__Number_of_Recurrences__c))</errorConditionFormula>
        <errorDisplayField>amc__Number_of_Recurrences__c</errorDisplayField>
        <errorMessage>You must set the Number of Recurrences</errorMessage>
    </validationRules>
</CustomObject>